--- a/index.html
+++ b/index.html
@@ -4,35 +4,74 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Interioreamesera - Furniture Excellence</title>
+    <title>Interioreamesera - E-Commerce Furniture Showroom</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Interioreamesera Logo" class="logo">
+        <nav>
+            <div class="logo"><img src="images/logo.png" alt="Interioreamesera Logo"></div>
+            <ul class="nav-links">
+                <li><a href="#about-us">About Us</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact-us">Contact Us</a></li>
+                <li><a href="#cart">Cart</a></li>
+            </ul>
+        </nav>
         <h1>Welcome to Interioreamesera</h1>
+        <p>Your one-stop shop for modern furniture.</p>
     </header>
     <main>
-        <section class="about-us">
+        <section id="about-us" class="about-us">
             <h2>About Us</h2>
-            <p>At Interioreamesera, we blend creativity, craftsmanship, and innovation to bring you high-quality, custom-designed furniture that transforms any space. From modern to classic designs, we cater to the unique tastes of our customers, ensuring each piece is a perfect fit for your home or office.</p>
+            <p>At Interioreamesera, we specialize in providing stylish and high-quality furniture designed to elevate your living spaces. Our commitment to craftsmanship and customer satisfaction sets us apart.</p>
         </section>
-        <section class="our-products">
-            <h2>Our Products</h2>
-            <ul>
-                <li>Custom Sofas and Chairs</li>
-                <li>Dining Room Sets</li>
-                <li>Office Furniture</li>
-                <li>Bedroom Furniture</li>
-                <li>Outdoor Furniture</li>
-            </ul>
+        <section id="products" class="product-listing">
+            <h2>Featured Products</h2>
+            <div class="product-grid">
+                <div class="product-card">
+                    <img src="images/product1.jpg" alt="Modern Sofa">
+                    <h3>Modern Sofa</h3>
+                    <p>Comfortable and stylish sofa for any living room.</p>
+                    <p class="price">$499.99</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/product2.jpg" alt="Dining Table Set">
+                    <h3>Dining Table Set</h3>
+                    <p>Elegant dining table set perfect for family gatherings.</p>
+                    <p class="price">$799.99</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/product3.jpg" alt="Office Desk">
+                    <h3>Office Desk</h3>
+                    <p>Stylish and functional desk for your home office.</p>
+                    <p class="price">$349.99</p>
+                    <button>Add to Cart</button>
+                </div>
+                <div class="product-card">
+                    <img src="images/product4.jpg" alt="Accent Chair">
+                    <h3>Accent Chair</h3>
+                    <p>A perfect addition to any room for extra comfort.</p>
+                    <p class="price">$199.99</p>
+                    <button>Add to Cart</button>
+                </div>
+            </div>
         </section>
-        <section class="contact-us">
+        <section id="contact-us" class="contact-us">
             <h2>Contact Us</h2>
-            <p>Have a question or want to place a custom order? Reach out to us at <a href="mailto:info@interioreamesera.com">info@interioreamesera.com</a> or call us at +1-234-567-890.</p>
+            <p>If you have any questions, feel free to reach out to us:</p>
+            <p>Email: <a href="mailto:info@interioreamesera.com">info@interioreamesera.com</a></p>
+            <p>Phone: +1-234-567-890</p>
         </section>
     </main>
     <footer>
+        <div class="social-links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+        </div>
         <p>&copy; 2024 Interioreamesera. All rights reserved.</p>
     </footer>
 </body>
